src/objects/Commission_Item__c.object
<CustomObject>
    <description>A list of items that are used to calculate commissions. For example, in a lease comp this will be made up of all of the rent times the commission percent for each lease period.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>The total consideration for this line item.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Area_Sq_Ft__c</fullName>
        <inlineHelpText>The size of the space in square feet.</inlineHelpText>
        <label>Area (Sq Ft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission_Amount__c</fullName>
        <formula>Total__c * Commission_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Percent__c</fullName>
        <label>Commission (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Comp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comp</label>
        <referenceTo>Sale__c</referenceTo>
        <relationshipLabel>Commission Items</relationshipLabel>
        <relationshipName>Commission_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>The order that this item will show up on the Comp and the Invoice</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rent_Sq_Ft__c</fullName>
        <label>Rent/Sq Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Amount__c *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>$/SF/Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$/SF/Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount/Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount/Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% of Sale Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% of  Flat Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiated Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Brokerage Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonus per Square Feet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Commission Item</label>
    <nameField>
        <displayFormat>Item-{00000}</displayFormat>
        <label>Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Items</pluralLabel>
    <recordTypes>
        <fullName>Lease</fullName>
        <active>true</active>
        <label>Lease</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sale</fullName>
        <active>true</active>
        <label>Sale</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>